# web_projects_game_test

./: README.md  notebook2.ipynb  notebook3.ipynb  requirements.txt
Cuda_project/: Cuda_project.ipynb  Cuda_project1.ipynb  Demostration.md  README.md
Web_game/: README.md
my_opencv_project/: CMakeLists.txt  README.md
my_opencv_project/include/: common.h  image_processing.h  video_processing.h
my_opencv_project/src/: common.cpp  common.cu  image_processing.cpp  image_processing.cu  main.cpp  main.cu  video_processing.cu
